# zk-bitcoin-light-client

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
client/src/server/: handlers.rs
contracts/: foundry.toml
contracts/script/: DeployWBTC.s.sol  DeployZkBTCVault.s.sol  DeployzkBTC.s.sol
contracts/src/: Fibonacci.sol  WBTC.sol  zkBTC.sol  zkBTCVault.sol
contracts/test/: Integration.t.sol  WBTC.t.sol  ZkBTCVaultDeployment.t.sol  zkBTC.t.sol  zkBTCVault.t.sol
lib/: Cargo.toml
lib/src/: lib.rs
orderbook/: README.md  package-lock.json  package.json
orderbook/src/: index.ts
orderbook/src/config/: database.ts  index.ts
orderbook/src/database/: schema.sql
orderbook/src/routes/: orders.ts
orderbook/src/services/: addressGenerator.ts  orderService.ts
orderbook/src/types/: order.ts
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
